-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.11.0 FF
-
None
-
-
3176dd398 (dev), 8d6c79433 (6.10), 98ca17784 (6.9), d34194979 (tqtc/lts-6.8)
I noticed this crash on the qtdice demo that's caused by the MediaPlayer, attached is a prettified stack trace of the crash.
For Gerrit Dashboard: QTBUG-139773 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
673689,3 | MediaPlayer, Android: Handle error if temporary file can not be made | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
673735,2 | MediaPlayer, Android: Handle error if temporary file can not be made | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
673886,2 | MediaPlayer, Android: Handle error if temporary file can not be made | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
673902,2 | MediaPlayer, Android: Handle error if temporary file can not be made | tqtc/lts-6.8 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |